core/traefik.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
  namespace: kube-system
  labels:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: traefik-dashboard
spec:
  type: ClusterIP
  ports:
  - name: traefik
    port: 9000
    targetPort: traefik
    protocol: TCP
  selector:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-kube-system
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-internal
  namespace: kube-system
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: traefik.lan
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: traefik-dashboard
                port:
                  number: 9000
